# dague-mic

./: .hgignore  CMakeLists.txt  config.dancer  config.trantor  dequeue.h
cmake_modules/: FindPASTIX.cmake  FindSCOTCH.cmake
data_dist/: CMakeLists.txt
data_dist/matrix/: matrix.c  two_dim_rectangle_cyclic.c
data_dist/sparse-matrix/: CMakeLists.txt  Pastix_structs.h  anthony.h  dague_sparse.h  debug-png-generation.c  debug-png-generation.h  pastix-to-tiles.c  pastix-to-tiles.h  pastix_internal.h  precision.h  si-to-tssm.c  si-to-tssm.h  sparse-input.h  sparse-matrix.c  sparse-matrix.h  sparse-shm-matrix.c  sparse-shm-matrix.h  sparse-vector.c  zread.c  zsi_to_tssm.c  zsparse-shm-matrix.c
data_dist/sparse-matrix/pastix_internal/: api.h  assembly.h  blend.h  bulles.h  coefinit.h  common_pastix.h  csc.h  csc_intern_build.h  csc_intern_updown.h  debug.h  dof.h  errors.h  fax.h  ftgt.h  graph.h  kass.h  nompi.h  order.h  out.h  param_blend.h  pastix_internal.h  pastixstr.h  queue.h  solver.h  solverRealloc.h  sopalin3d.h  sopalin_acces.h  sopalin_define.h  sopalin_init.h  sopalin_thread.h  stack.h  symbol.h  updown.h
dplasma/cores/: CMakeLists.txt  cuda_sgemm.c  cuda_stsmqr.c  cuda_zgemm.c  cuda_zgemm.h  dplasma_zcores.h  mic_zgemm.c  mic_zgemm.h  zgemm_11_12_13.cu  zgemm_20_30.cu
dplasma/include/: dplasma_z.h
dplasma/lib/: CMakeLists.txt  core_zddtf2.c  core_zddtrf.c  dplasma.h  dplasma_z.h  flops.h  map2.jdf  zgebmm.jdf  zgebut.jdf  zgelqf.jdf  zgelqf_wrapper.c  zgemm_NN.jdf  zgemm_NN_bcast.c  zgemm_NN_bcast.h  zgemm_NN_bcast.jdf  zgemm_NT.jdf  zgemm_bcast_wrapper.c  zgeqrf.jdf  zgeqrf_param.jdf  zgeqrf_param_wrapper.c  zgeqrf_wrapper.c  zgerbb_1.jdf  zgerbb_2.jdf  zgerbb_wrapper.c  zgerfs.jdf  zgerfs_exp.jdf  zgerfs_wrapper.c  zgetrf.jdf  zgetrf_fusion.jdf  zgetrf_fusion_wrapper.c  zgetrf_incpiv.jdf  zgetrf_incpiv_sd.jdf  zgetrf_incpiv_wrapper.c  zgetrf_panel.jdf  zgetrf_sd.jdf  zgetrf_sp.jdf  zgetrf_sp_wrapper.c  zgetrf_std.jdf  zgetrf_wrapper.c  zgetrs_wrapper.c  (+50 more)
dplasma/testing/: CMakeLists.txt  RulesTestings.cmake  common.c  common.h  testing_zgemm.c  testing_zgemm_bcast.c  testing_zgerfs.c  testing_zgetrf.c  testing_zgetrf_fusion.c  testing_zgetrf_fusion_panel.c  testing_zgetrf_sp.c  testing_zlange.c  testing_zpotrf_sp.c  testing_ztrmm.c  testing_ztrsm.c
dsparse/: CMakeLists.txt
dsparse/cores/: CMakeLists.txt  cgemm_fermi_define.h  core_zgetro.c  core_zpotrfsp.c  cuda_sparse.c  cuda_sparse.h  cuda_sparse_sgemm.c  cuda_sparse_sgemm.h  cuda_sparse_sgemm_kernel.cu  cuda_sparse_sgemm_kernel_bloktab.cu  cuda_zgetrfsp_gemm.c  cuda_zgetrfsp_gemm.h  cuda_zpotrf1d_gemm.c  cuda_zpotrf1d_gemm.h  cuda_zpotrfsp_gemm.c  cuda_zpotrfsp_gemm.h  dgemm_fermi_define.h  dsparse_zcores.h  gemm_stencil.cu  gemm_stencil_20_30.cu  gemm_stencil_defs.cu  sgemm_fermi_define.h  zgemm_fermi.cu  zgemm_fermi_define.h  zgemm_sparse_11_12_13.cu  zgemm_sparse_20_30.cu
dsparse/include/: CMakeLists.txt  dsparse.h  dsparse_z.h
dsparse/lib/: CMakeLists.txt  core_z.h  core_zgemdm.c  core_zgetrfsp.c  core_zhetrfsp.c  core_zpotrfsp.c  core_zpotrssp.c  core_zsytrfsp.c  zcsc2cblk.jdf  zcsc2cblk_wrapper.c  zgetrf_sp1dplus.jdf  zgetrf_sp1dplus_wrapper.c  zhetrf_sp1dplus.jdf  zhetrf_sp1dplus_wrapper.c  zpotrf_sp1dplus.jdf  zpotrf_sp1dplus_wrapper.c  zpotrs_sp1dplus.c  zpotrs_sp1dplus.jdf  zpotrs_sp1dplus_wrapper.c  zsytrf_sp1dplus.jdf  zsytrf_sp1dplus_wrapper.c
dsparse/testing/: CMakeLists.txt  RulesTestingsSP.cmake  common.c  common.h  common_timing.h  testing_zpotrf_sp.c
include/: dague.h  dague_config.h.in  dague_config_bottom.h  data_distribution.h  datarepo.h  debug.h  gpu_data.h  gpu_malloc.h  lifo.h  list_item.h  remote_dep.h
src/: CMakeLists.txt  dague.c  data.c  gpu_data.c  profiling.c  remote_dep.c  remote_dep_mpi.c
src/devices/: device.c  device_malloc.h  mymic.h
src/devices/cuda/: cuda_scheduling.h  dev_cuda.c  dev_cuda.h
src/devices/mic/: dev_mic.c  dev_mic.h  mic_scheduling.h
src/devices/mic/dague_mic_server/: Makefile  dague_mic_server.c  dague_mic_server.h  dague_mic_server_v2.c
tests/: CMakeLists.txt
tests/pingpong/: CMakeLists.txt  bandwidth.jdf  pingpong_gpu.h  pingpong_mic.h  rtt_data.c
tools/: gen-sparsedag.sh
tools/cscalapack/: Makefile  scalapackLU.c
tools/dague-compiler/: jdf2c.c  string_arena.h
tools/precision_generator/: subs.py
tools/profiling/xml2traces/: Makefile
